# Melosyne_ThreadCenter

./: .clang-format  .clang-format-ignore  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md
benchmarks/: thread_center_vs_taskflow_bench.cpp
cmake/: ThreadCenterConfig.cmake.in
docs/: CODING_STYLE.md  thread_center_design.md  thread_center_v2_design.md
examples/: basic_usage.cpp
include/thread_center/: common.hpp  frame_plan.hpp  plan.hpp  profiling_export.hpp  thread_center.hpp
include/thread_center/detail/: taskflow_backend.hpp
modules/: Center.Thread.Backend.Taskflow.cppm  Center.Thread.Common.cppm  Center.Thread.FramePlan.cppm  Center.Thread.Plan.cppm  Center.Thread.ProfilingExport.cppm  Center.Thread.cppm
scripts/: compare_header_vs_module.ps1
tests/: thread_center_tests.cpp
